gitops/infra/k8s-settings/prd/serengeti-kong-kong-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-clusterissuer
    konghq.com/https-redirect-status-code: "301"
    kubernetes.io/ingress.class: default
    meta.helm.sh/release-name: serengeti-kong
    meta.helm.sh/release-namespace: serengeti-kong
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  creationTimestamp: "2025-09-05T00:04:56Z"
  generation: 2
  labels:
    app.kubernetes.io/instance: serengeti-kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: "3.3"
    helm.sh/chart: kong-0.1.1
    konghq.com/component: quickstart
  name: serengeti-kong-kong-manager
  namespace: serengeti-kong
  resourceVersion: "18039246"
  uid: 24186fcf-c6cf-41c2-b8ba-53b36e021176
spec:
  rules:
  - host: konggw.api.inaea.re.kr
    http:
      paths:
      - backend:
          service:
            name: serengeti-kong-kong-manager
            port:
              number: 8445
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - konggw.api.inaea.re.kr
    secretName: kong-server-tls
status:
  loadBalancer: {}
